# GalaxyWinPython

./: GC.dsw  LICENSE  LICENSE.Sun  Makefile  README  README.md
contrib/MIT/: Makefile
contrib/MIT/galaxy/: Makefile
contrib/MIT/galaxy/src/: Makefile
contrib/MIT/galaxy/templates/: rules.make  targets.make
contrib/MITRE/: Makefile
contrib/MITRE/bindings/: Makefile
contrib/MITRE/bindings/binding_support/: Makefile  binding_support.c  binding_support.h  libGalaxy_binding_support.dsp  libGalaxy_binding_support.dsw  libGalaxy_binding_support.mak
contrib/MITRE/bindings/clisp/: Galaxy.cl  GalaxyIO.cl  MGalaxy.cl  Makefile  SLSUtil.cl  acl_callbacks.c  cGalaxy.cl
contrib/MITRE/bindings/java/: Makefile  build.bat  index.html
contrib/MITRE/bindings/python/: Galaxy.py  GalaxyIO.py  MGalaxy.py  Makefile  SLSUtil.py  TkMGalaxy.py  cGalaxy.dsp  cGalaxy.dsw  cGalaxy.mak  cGalaxy_wrap.c
contrib/MITRE/bindings/swig/: cGalaxy.i  swig.make
contrib/MITRE/demos/: Makefile
contrib/MITRE/demos/docs/: Parser.html  toy-travel-ref.html  toy-travel-tut.html
contrib/MITRE/demos/toy-travel/: Audio.c  Audio.dsp  Audio.mak  Audio_server.h  Backend.c  Backend.dsp  Backend.mak  Dialogue.c  (+38 more)
contrib/MITRE/examples/: Makefile
contrib/MITRE/templates/: GC_HOME.make.in  GC_py_init.py  MITRE_example.make  MIT_c_server.make  Makefile  acl-init.cl  acl.csh  acl.make  clean.make  common.make  dir.make  env.csh.in  env_clear.make  java.csh  java.make  pm_settings.config  pm_settings_nt.config  pm_settings_posix.config  python.csh  python.make  script.make  subdir.make  utilities_targets.make
contrib/MITRE/utilities/: Makefile
docs/: index.html
docs/manual/: index.html  overview.html
docs/manual/admin/: 2point1upgrade.html  3point0upgrade.html  3point1upgrade.html  3point2upgrade.html  3point3upgrade.html  4point0upgrade.html  install.html  make.html  new_features.html  new_features_v3.html  ntport.html  org.html  release_notes.html  release_notes_v1.html  release_notes_v2.html  release_notes_v3.html  threads.html  upgrade.html
docs/manual/advanced/: binary_data.html  environment.html  exec.html  external_makefile.html  hub_listener.html  hub_properties.html  provider_id.html  scriptless.html  server_locations.html  session.html  signal.html  special_mainloop.html  synch_vs_asynch.html  timed_tasks.html  timestamps.html  util.html
docs/manual/reference/: adding.html  api_index.html  brokering.html  faq.html  frame.html  glossary.html  hub.html  libgalaxy.html  libgalaxy_io.html  libserverstub.html  libutil.html  logging.html  pgm.html  reserved_keys.html  server_structure.html
docs/manual/tutorial/: basic_server.html  broker_tutorial.html  end_to_end.html  errors.html  frame_intro.html  getting_started.html  how_it_works.html  logging_tutorial.html  new_messages.html  pgm_intro.html  session_tutorial.html  ui.html
docs/servers/: builtin.html  hub_gui.html  libGalaxyEnhancements.html  turn_management.html  verify_program.html
include/galaxy/: common_decls.h  debug_memory.h  distinguished_keys.h  error_tags.h  extra_program_tags.h  galaxy.h  galaxy_all.h  galaxy_io.h  generic-server-types.h  generic-server.h  gthread.h  io_msg_types.h  name_barrier.h  program.h  program_tags.h  server_functions.h  server_prototypes.h  socket.h  sysdep.h  tag_enum.h  util.h
src/: Makefile
src/HUB/: HUB.dsp  HUB.dsw  HUB.mak  Makefile  README  alarm.c  builtin.c  builtin.h  db.c  external_api.c  external_runtime_api.c  hub.c  hub.h  hub_init.c  hub_internal.h  hub_namespace.c  hub_process.c  hub_report_status.c  hub_special.c  hub_util.c  local-server.h  logfile.c  session.c
src/libGalaxy/: Makefile  libGalaxy.dsp  libGalaxy.dsw  libGalaxy.mak
src/libGalaxy/ServerStub/: README  SS_default_init.c  broker_proxy.c  continuation.c  continuation.h  frame_util.c  galaxy_elr.c  generic-server-internal.h  generic-server-main.c  generic-server-toplevel.c  generic-server.c  init_server_wrapper.c  print_usage.c  server_locations.c
src/libGalaxy/galaxy/: debug_memory.c  dispatch_function.c  dynamic_buffer.c  error_tags.c  gal_internal.h  gal_types_internal.h  grovel.c  gthread_init.c  local_memory.c  name_barrier.c  nfio.c  nframe.c  plist.c  pr_util.c  print_program.c  program_tags.c  read_program.c  signal.c  stream_util.c  string_util.c  sym.c  test_conditions.c  timed_tasks.c  tobj.c  uucode.c  vlist.c
src/libGalaxy/io/: binary_io.c  binary_io.h  broker_data.c  galio_types_internal.h  hub_server.c  io_internal.h  ip_util.c  pointer_queue.c  sockqueue.c  xdr_buffer.c
src/libGalaxy/util/: gthread.c  mkdirp.c  oa.c  sls_verbose.c  sls_verbose_color.c  sock.c
templates/: GC_HOME.make.in  GC_config.h.in  GC_env.make  Galaxy.make  Makefile  Makefile.stub  acconfig.h  archos.make  config.make.in  config_files.make  configure  configure.in  configure.main  contrib_MIT.make  contrib_MIT_env.make  depend.csh  extract_values.csh  extract_values.make  fat_binary.csh.in  galaxy_env.make  rules.make  rules_single.make  set_arch.csh  set_archos_cross.sh  set_os.csh  shared_libs.make  shared_libs.make.in  targets.make  template_targets.make
templates/cross_compilation/: armv4l-linux-config.sh  configure_values.c
templates/x86-nt/: GC_config.h  config.values.in
tutorial/brokering/: synth.config  synth.frames  synth.pgm
tutorial/errors/: catch-server-error.config  error-parse.pgm  error.frames  hub-error.config  server-error.config  server-error.frames
tutorial/logging/: parse-server.config  parse.pgm  show-log.config
tutorial/messages/: backend.config  backend.frames  backend.pgm  example.frames  greeting.config  greeting.frames  hub_backend.config  hub_backend.frames  hub_backend.pgm  string_io.config  string_io.frames  string_io.pgm
tutorial/process_monitor/: dir.config
tutorial/program_file/: nomatch.config  nomatch.frames  none.config  none.frames  none.pgm
tutorial/servers/: parse-hub.config  parse-server.config  parse.frames  parse.pgm
tutorial/sessions/: unit-tester.config
tutorial/toy-travel/: short-example.frames  short-toy-travel.config  toy-travel-audio.config  toy-travel.pgm
(+425 files in other folders)
